moved css to a folder

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Roger Truong's Portfolio</title>
     <link rel="icon" href="images/heart.png" type="image/x-icon" />
     <link rel="shortcut icon" href="images/heart.png" type="image/x-icon" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="aboutmedia.css" />
-    <link rel="stylesheet" href="background.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/aboutmedia.css" />
+    <link rel="stylesheet" href="./css/background.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -113,7 +113,7 @@
             <div class="projectImage" id="oneOne">
               <div class="projectText">Discord Economy Bot</div>
               <!-- <img src="images/clouds.jpg" alt="" /> -->
-              <div class="filter">
+              <div class="filter" id="vid1">
                 <video
                   width=""
                   height="360"
@@ -128,6 +128,7 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
+                <img src="images/discordbot1.png" alt="">
                 <a
                   class="learnMore"
                   href="projects1.html"
@@ -139,9 +140,9 @@
             </div>
 
             <div class="projectImage" id="oneTwo">
-              <div class="projectText">Placeholder Project</div>
+              <div class="projectText">TikTok Face Filter</div>
 
-              <div class="filter">
+              <div class="filter" id="vid2">
                 <video
                   width=""
                   height="360"
@@ -156,17 +157,18 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <a
+                <img src="images/manga2.jpg" alt="">
+                <div
                   class="learnMore"
-                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  href=""
                   target="blank"
                 >
                   Learn More
-                </a>
+              </div>
               </div>
             </div>
             <div class="projectImage" id="twoOne">
-              <div class="projectText">Placeholder Project</div>
+              <div class="projectText">Quiz Website w/ RESTful API</div>
               <div class="filter">
                 <video
                   width=""
@@ -182,18 +184,18 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-
-                <a
+                <img src="images/manga2.jpg" alt="">
+                <div
                   class="learnMore"
-                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  href=""
                   target="blank"
                 >
                   Learn More
-                </a>
+              </div>
               </div>
             </div>
             <div class="projectImage" id="twoTwo">
-              <div class="projectText">Placeholder Project</div>
+              <div class="projectText">Pixel Art Generator</div>
 
               <div class="filter">
                 <video
@@ -210,14 +212,15 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
+                <img src="images/manga2.jpg" alt="">
 
-                <a
+                <div
                   class="learnMore"
-                  href="https://chat.openai.com/c/f5a482e3-e1b0-4e64-aeb1-9e3156288f1e"
+                  href=""
                   target="blank"
                 >
                   Learn More
-                </a>
+              </div>
               </div>
             </div>
           </div>
