--- a/projects1.html
+++ b/projects1.html
@@ -9,12 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="images/heart.png" type="image/x-icon" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="aboutmedia.css" />
-    <link rel="stylesheet" href="background.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <link rel="stylesheet" href="contacts.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/aboutmedia.css" />
+    <link rel="stylesheet" href="./css/background.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,13 +67,25 @@
     
     <main>
         <div class="title">Discord Economy Bot</div>
-        <div class="maintext">hello</div>
         <a href="https://github.com/rogertruong7/discordBot" class="maintext" target="_blank" id="github">Link to repository</a>
-        <div class="filler"></div>
-        <div class="filler"></div>
-        <div class="filler"></div>
-        <div class="filler"></div>
-        <div class="filler"></div>
+        <div class="container">
+          <h1>Description</h1>
+          <p>This bot is a personal project aimed at providing a fun and interactive experience for users within Discord servers. It features an economy system and various games like blackjack, along with its own MySQL2 database to store user data. This was coded primarily using Javascript and SQL.</p>
+
+          <h2>Features</h2>
+          <ul>
+            <li><strong>Economy System:</strong> Users can earn virtual currency, gamble, and participate in various economy-related activities.</li>
+            <li><strong>Games:</strong> Enjoy classic games like blackjack within your Discord server.</li>
+            <li><strong>MySQL2 Database:</strong> The bot utilises its own MySQL2 database to store user data securely.</li>
+          </ul>
+
+          <h2>Commands</h2>
+          <ul>
+            <li><strong>Economy Commands:</strong> Check your balance, earn currency, gamble, and manage your virtual wealth.</li>
+            <li><strong>Game Commands:</strong> Play games like blackjack, chicken fight, and more directly in Discord.</li>
+          </ul>
+
+          </div>
         <div class="filler"></div>
     </main>
 <!-- Footer Section -->
