--- a/contacts.html
+++ b/contacts.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="images/heart.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/styles.css" />
+   <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./css/aboutmedia.css" />
     <link rel="stylesheet" href="./css/background.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
+    <link rel="stylesheet" href="./css/contacts.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
