--- a/projects1.html
+++ b/projects1.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/about.css" />
     <link rel="stylesheet" href="./css/aboutmedia.css" />
     <link rel="stylesheet" href="./css/background.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
