fixed issue where projects wouldnt be relative to about div

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="scroll-container">
       <div class="background">
-        <img src="images/clouds.jpg" alt="" />
+        <img src="images/berserk.png" alt="" />
       </div>
       <!-- Side Navigation -->
       <div class="sidenav">
@@ -75,7 +75,6 @@
 
       <!-- Main Content -->
       <div class="main">
-        
         <!-- About Me Section  -->
         <div class="aboutSection">
           <!-- About Me Title -->
@@ -94,7 +93,12 @@
           </div>
 
           <div class="cv-btn">
-            <a href="https://www.linkedin.com/in/roger-truong/" target="blank" class="cv">Download CV ↓</a>
+            <a
+              href="https://www.linkedin.com/in/roger-truong/"
+              target="blank"
+              class="cv"
+              >Download CV ↓</a
+            >
           </div>
 
           <!-- About Me Image  -->
@@ -106,8 +110,9 @@
             />
           </div>
         </div>
+        <div class="filler"></div>
         <!-- Project Section -->
-        <section id="projects">
+        <div id="projects">
           <h2 id="projectT">PROJECTS</h2>
           <div class="projectGrid">
             <div class="projectImage" id="oneOne">
@@ -128,12 +133,8 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/discordbot1.png" alt="">
-                <a
-                  class="learnMore"
-                  href="projects1.html"
-                  target="blank"
-                >
+                <img src="images/discordbot1.png" alt="" />
+                <a class="learnMore" href="projects1.html" target="blank">
                   Learn More
                 </a>
               </div>
@@ -157,14 +158,8 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="">
-                <div
-                  class="learnMore"
-                  href=""
-                  target="blank"
-                >
-                  Learn More
-              </div>
+                <img src="images/manga2.jpg" alt="" />
+                <div class="learnMore" href="" target="blank">Learn More</div>
               </div>
             </div>
             <div class="projectImage" id="twoOne">
@@ -184,14 +179,8 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="">
-                <div
-                  class="learnMore"
-                  href=""
-                  target="blank"
-                >
-                  Learn More
-              </div>
+                <img src="images/manga2.jpg" alt="" />
+                <div class="learnMore" href="" target="blank">Learn More</div>
               </div>
             </div>
             <div class="projectImage" id="twoTwo">
@@ -212,19 +201,13 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="">
+                <img src="images/manga2.jpg" alt="" />
 
-                <div
-                  class="learnMore"
-                  href=""
-                  target="blank"
-                >
-                  Learn More
-              </div>
+                <div class="learnMore" href="" target="blank">Learn More</div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
         <!-- Experience Section -->
         <section class="experiences" id="experience">
