fixed projects and experiences

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- Header Bar -->
       <nav class="navbar">
         <div class="navbar_container">
-          <a href="/personalwebsite/" id="logo"
+          <a href="" id="logo"
             ><b>Roger Truong's Portfolio</b>
           </a>
 
@@ -141,7 +141,7 @@
             </div>
 
             <div class="projectImage" id="oneTwo">
-              <div class="projectText">TikTok Face Filter</div>
+              <div class="projectText">TikTok Playback Speed Chrome Extension</div>
 
               <div class="filter" id="vid2">
                 <video
@@ -184,7 +184,7 @@
               </div>
             </div>
             <div class="projectImage" id="twoTwo">
-              <div class="projectText">Pixel Art Generator</div>
+              <div class="projectText"> Work in Progress </div>
 
               <div class="filter">
                 <video
@@ -261,10 +261,7 @@
             <h3 class="languageHeader">Languages</h3>
             <div class="languages">
               <img src="languages/c.png" alt="" class="language" id="c">
-              <p>My experience in C: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. </p>
+              <p>My experience in C: I am well versed in utilising data structure and algorithms within this language, having created multiple games using linked lists and arrays. I  </p>
               <img src="languages/asm.png" alt="" class="language" id="c">
               <p>My experience in Assembly: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
