--- a/projects1.html
+++ b/projects1.html
@@ -29,7 +29,7 @@
       <!-- Header Bar -->
     <nav class="navbar">
       <div class="navbar_container">
-        <a href="/personalwebsite/" id="logo"
+        <a href="index.html" id="logo"
           ><b>Roger Truong's Portfolio</b>
         </a>
 
