--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
           <div class="cv-btn">
             <a
-              href="https://www.linkedin.com/in/roger-truong/"
+              href="./assets/Roger Truong Resume.docx.pdf"
               target="_blank"
               class="cv"
               >Download CV ↓</a
@@ -133,11 +133,11 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/discordbot1.png" alt="" />
+                <img class="project_images" src="images/discordbot1.png" alt="" />
                 <a class="learnMore" href="projects1.html" >
                   Learn More
                 </a>
-              </div>
+              </div> 
             </div>
 
             <div class="projectImage" id="oneTwo">
@@ -158,8 +158,10 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="" />
-                <div class="learnMore" href="" >Learn More</div>
+                <img class="project_images" src="images/unnamed.png" alt="" />
+                <a class="learnMore" target="blank" href="https://chromewebstore.google.com/detail/tiktok-2x-speed-option/lejgjoflhajdmmbmeklmijaboflohhig?hl=en" >
+                  Learn More
+                </a>
               </div>
             </div>
             <div class="projectImage" id="twoOne">
@@ -179,12 +181,12 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="" />
-                <div class="learnMore" href="" target="blank">Learn More</div>
+                <img class="project_images" src="images/manga2.jpg" alt="" />
+                <a class="learnMore" href="https://github.com/rogertruong7/Quiz-App-Backend" target="blank">Learn More</a>
               </div>
             </div>
             <div class="projectImage" id="twoTwo">
-              <div class="projectText"> Work in Progress </div>
+              <div class="projectText"> Forum Website </div>
 
               <div class="filter">
                 <video
@@ -201,9 +203,9 @@
                   <source src="images/HOTPOT.mp4" type="video/mp4" />
                   Your browser does not support the video tag.
                 </video>
-                <img src="images/manga2.jpg" alt="" />
+                <img class="project_images" src="images/qanda.jpg" alt="" />
 
-                <div class="learnMore" href="" target="blank">Learn More</div>
+                <a class="learnMore" href="https://github.com/rogertruong7/QandA-Forum-Website" target="blank">Learn More</a>
               </div>
             </div>
           </div>
