changes to expeirence

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
               <img src="./images/foodlovers.png" alt="">
             </div>
             <div class="experience__content">
-              <h3 class="experienceT">Marketing Director of UNSW Food Lovers</h3>
+              <h3 class="experienceT">Marketing & Media Director of UNSW Food Lovers</h3>
               <p class="maintext">
                 As the Marketing Director at UNSW Food Lovers, I have the
                 privilege of spearheading our marketing efforts to effectively
