added og meta for html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <meta property="og:title" content="Roger Truong's Portfolio">
+    <meta property="og:description" content="My portfolio which contains my projects and experience.">
+    <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D5603AQHG33AL2TfaGQ/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1705051745334?e=1735171200&v=beta&t=wiaT7BOpASqv_8HH32vuhSDSmV7jw5_lvkaGZuHkjnE">
+    <meta property="og:type" content="website">
     <title>Roger Truong's Portfolio</title>
     <link rel="icon" href="images/heart.png" type="image/x-icon" />
     <link rel="shortcut icon" href="images/heart.png" type="image/x-icon" />
