rmeoving about me

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="aboutSection">
           <!-- About Me Title -->
           <div class="aboutme-btn" id="about">
-            <div href="/" class="about">⊳ ABOUT ME ⊲</div>
+            <div class="about">⊳ ABOUT ME ⊲</div>
           </div>
 
           <!-- About Me Text -->
