added forum website page

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </video>
                 <img class="project_images" src="images/qanda.jpg" alt="" />
 
-                <a class="learnMore" href="https://github.com/rogertruong7/QandA-Forum-Website" target="blank">View Repo</a>
+                <a class="learnMore" href="projects2.html" >Learn More</a>
               </div>
             </div>
             <div class="projectImage" id="threeOne">
