fixed style of new page

--- a/projects2.html
+++ b/projects2.html
@@ -70,7 +70,7 @@
     <main>
         <div class="title">Forum Website QandA</div>
         <a href="https://github.com/rogertruong7/QandA-Forum-Website" class="linkText" target="blank" id="github">Link to repository 🔗</a>
-        <div class="container">
+        <div class="container" id="project_description">
           
           
           <h1>Description</h1>
@@ -79,47 +79,37 @@
           <h2>Features</h2>
           <ul>
             <li>
-              <strong>Login Page:</strong>
+              <b>Login Page:</b>
               <img src="./forumWebsiteSS/login.PNG" alt="">
             </li>
             <li>
-              <strong>Register Page:</strong>
+              <b>Register Page:</b>
               <img src="./forumWebsiteSS/register.PNG" alt="">
             </li>
             <li>
-              <strong>Dashboard Page:</strong>
+              <b>Dashboard Page:</b>
               <img src="./forumWebsiteSS/dashboard.PNG" alt="">
             </li>
             <li>
-              <strong>Thread Page:</strong>
+              <b>Thread Page:</b>
               <img src="./forumWebsiteSS/thread.PNG" alt="">
               <p>On the thread page, there is functionality to comment, reply to comments, edit, watch a thread, delete a thread if owner or admin, edit a thread if owner or admin, edit post, and create a post. The sidebar shows all threads visible to the user.</p>
             </li>
             <li>
-              <strong>Reply to comment functionality:</strong>
+              <b>Reply to comment functionality:</b>
               <img src="./forumWebsiteSS/reply.PNG" alt="">
             </li>
             <li>
-              <strong>Edit comment functionality:</strong>
+              <b>Edit comment functionality:</b>
               <img src="./forumWebsiteSS/Edit.PNG" alt="">
             </li>
             <li>
-              <strong>Profile page:</strong>
+              <b>Profile page:</b>
               <img src="./forumWebsiteSS/Profile.PNG" alt="">
               <p>Clicking a profile from a thread, comment section, or the top right, takes you to the profile page.</p>
             </li>
           </ul>
 
-          <h2>Commands</h2>
-          <ul>
-            <li><strong>Economy Commands:</strong> Check your balance, earn currency, gamble, and manage your virtual wealth.</li>
-            <li><strong>Game Commands:</strong> Play games like blackjack, chicken fight, and more directly in Discord.</li>
-          </ul>
-          <div class="imageBox">
-            <img src="images/discordbot1.png" class="discordPhotos" alt="">
-          </div>
-
-          </div>
         <div class="filler"></div>
     </main>
 <!-- Footer Section -->
