updated website for tiktok extension page

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                   Your browser does not support the video tag.
                 </video>
                 <img class="project_images" src="images/unnamed.png" alt="" />
-                <a class="learnMore" target="blank" href="https://chromewebstore.google.com/detail/tiktok-2x-speed-option/lejgjoflhajdmmbmeklmijaboflohhig?hl=en" >
+                <a class="learnMore" href="tiktokextension.html" >
                   Learn More
                 </a>
               </div>
